--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <video id="particles" autoplay muted playsinline loop>
-    <source src="Comp 1.mp4" type="video/mp4" />
+    <source src="comp1.mp4" type="video/mp4" />
   </video>
 
   <div class="content">
